8277631: ZGC: CriticalMetaspaceAllocation asserts

Reviewed-by: pliden, stefank, dholmes